add enemy drops

--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -2,8 +2,12 @@ Food.csv
 Material.csv
 Cooking.csv
 Enchant.csv
+EnemyDrop.csv
+WorldmapCollect.csv
 
 Enchant.*.csv
 Food.*.csv
 Material.*.csv
 Cooking.*.csv
+EnemyDrop.*.csv
+WorldmapCollect.*.csv
