--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -268,6 +268,9 @@ item_list:
     title: Ingredients
   food: 
     title: Food
+misc:
+  clear_session: Clear Session
+  clear_session_help: Clear you Inventory and Fertilizer Components
 goto: go to
 footer: >-
   I'm not affiliated with <a href="http://sakunaofriceandruin.com/">Sakuna: Of Rice and Ruin</a>, this is a free fansite and makes no profit.
